# dmos

./: .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md
.github/workflows/: build.yml
dm50/include/linux/: README.md
dm50/src/: dm50_skin.h  fonts.c  fonts.h  keyboard.c  keyboard.h  main.c
dmos/include/: dmos.h
iOS/: Launch Screen.storyboard
iOS/DM50.xcodeproj/: project.pbxproj
iOS/DM50.xcodeproj/project.xcworkspace/xcuserdata/javier.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/DM50.xcodeproj/xcshareddata/xcschemes/: DM50.xcscheme
iOS/DM50.xcodeproj/xcuserdata/javier.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
iOS/DM50.xcodeproj/xcuserdata/javier.xcuserdatad/xcschemes/: xcschememanagement.plist
macos/dm50.xcodeproj/: project.pbxproj
macos/dm50.xcodeproj/project.xcworkspace/xcuserdata/javier.xcuserdatad/: UserInterfaceState.xcuserstate
macos/dm50.xcodeproj/xcshareddata/xcschemes/: dm50.xcscheme  iOS.xcscheme  macOS.xcscheme
macos/dm50.xcodeproj/xcuserdata/javier.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
macos/dm50.xcodeproj/xcuserdata/javier.xcuserdatad/xcschemes/: xcschememanagement.plist
macos/macos/Assets.xcassets/dm50_skin.imageset/: Contents.json
src/: dmos.c
stm32/: DM50.code-workspace  Makefile  Readme.md  blinky.c  blinky.elf  linker_script.ld  main.c  main.elf  platformio.ini  startup_stm32f411xx.c  test_blink.c  test_blink.elf
stm32/old/: Readme.md  blinky.c  blinky.hex  stm32f4.ld
stm32/src/: main.c
